fix(dropdown): fix layout shift on loading
affects: @entur/dropdown

--- a/packages/dropdown/src/components/FieldComponents.scss
+++ b/packages/dropdown/src/components/FieldComponents.scss
@@ -127,8 +127,8 @@
         display: flex;
         justify-content: center;
         height: 100%;
-        width: 1rem;
-        margin-left: calc(0.5rem + 2px);
+        width: 1.5rem;
+        margin-left: 0.25rem;
         .eds-loading-dots__dot {
           background-color: var(--components-loader-loader-standard-text);
           .eds-contrast & {
